# chess-ai

./: .gitignore  CMakeLists.txt  README.md  build.sh  enginectl.sh  history.csv  jingyan.zhang.readme.md  todo.md  victor.martin.README.md
.cmake/: CMakeCache.txt  Makefile  TEST_move_t  blunder-ai  cmake_install.cmake  compile_commands.json
docs/: genrikh.kuznetsov.readme.md  jingyan.zhang.readme.md  leo.erdos.readme.md  todo.md  victor.martin.readme.md
exe/: blunder-ai.cpp  convert_pgn_to_uci.cpp  gen_opening.cpp  performance.cpp  search_test.cpp
include/: board_t.h  evaluation.h  helper.h  move_t.h  moves.h  piece_t.h  search.h
input_games/: master_games-1.pgn  master_games-10.pgn  master_games-11.pgn  master_games-12.pgn  master_games-13.pgn  master_games-14.pgn  master_games-15.pgn  master_games-16.pgn  master_games-17.pgn  master_games-18.pgn  master_games-19.pgn  master_games-20.pgn  master_games-21.pgn  master_games-22.pgn  master_games-23.pgn  master_games-24.pgn  master_games-25.pgn  master_games-26.pgn  master_games-27.pgn  master_games-28.pgn  master_games-29.pgn  master_games-30.pgn  master_games-31.pgn  master_games-32.pgn  master_games-33.pgn  master_games-34.pgn  master_games-35.pgn  master_games-36.pgn  master_games-37.pgn  master_games-38.pgn  master_games-4.pgn  master_games-5.pgn  master_games-6.pgn  master_games-7.pgn  master_games-8.pgn  master_games-9.pgn
lib/: CMakeLists.txt  antipiece_kind.cpp  board_t.cpp  cardboard_t.cpp  chess_coordinate_t.cpp  convert_pgn_to_uci.cpp  gen_move_fn.cpp  matrix_t.cpp  move_convert_fn.cpp  move_info.cpp  (+11 more)
(+12798 files in other folders)
